--- a/_data/skill-sprints/elastic.yml
+++ b/_data/skill-sprints/elastic.yml
@@ -4,8 +4,8 @@ column: 1
 style: is-light
 height: is-medium
 card-image: /img/elastic-card.png
-url: mysql
-name: Git Skill Sprint
+url: elastic
+name: ElasticSearch Skill Sprint
 problem:
     description: 
       - Teams that have recently started using programming languages may need to start thinking about using version control to track changes to their code.
