--- a/_data/skill-sprints/mysql.yml
+++ b/_data/skill-sprints/mysql.yml
@@ -5,10 +5,11 @@ style: is-light
 height: is-medium
 card-image: /img/mysql-card.png
 url: mysql
-name: Git Skill Sprint
+name: MySQL Skill Sprint
 problem:
-    description: 
-      - Teams that have recently started using programming languages may need to start thinking about using version control to track changes to their code.
+    description:
+      - subtitle: Structured storage of data
+        text: I really have to think carefully about the problem and solution of MYSQL skill sprints. Are we talking about only extracting data?
       - With code running on laptops comes a very high chance of sensitive data lying around on laptop hard-drives. This could present a serious compliance problem if the data contains personal information.
       - With people using their own laptops and not checking code into git for peer review there is often high error rates and less opportunity for collaboration between team members. 
     type: is-success
@@ -24,6 +25,17 @@ solution:
     icon: fa-atom
     media: text
 
+tech:
+  description: MySQL is an open-source relational database management system (RDBMS)
+  name: GCP
+  type: Relational Database
+  url: https://www.mysql.com/
+  benefits:
+    - Open Source
+    - Available from all cloud providers
+    - Mature - more than 25 years old
+    - Very Reliable
+
 
 scenario: A team that is already using programming languages such as Python or R that need to have a more formalised development process.
 items:
@@ -33,119 +45,3 @@ items:
     type: is-success
     icon: fa-atom
     media: text
-
-  - title: Team members get to grips wit Git.
-    description: 
-      - Git is ubiqutous in development teams today. When used properly it provides a near perfect change control and peer review processes. Teams that use git for collaboration are faster, more accurate with less knowledge silos.
-    type: is-link
-    icon: fa-code
-    media: text
-
-  - title: Employees learn how to independently consume modern cloud resources like AWS or Google or Azure.
-    description: 
-      - Running code on laptops can be a dangerous proposition. Users are less likely to use version control and there is a high change of sensitive data on the hard-disk. Our DevOps Skill Sprint enables users to make use of lightweight cloud computing environments to run their code.
-    type: is-success
-    icon: fa-lightbulb
-    media: text
-
-  - image: /img/pairing.png
-    media: image
-
-  - title: Invest in your staff and your business simultaneously.
-    description: 
-      - Skill Sprints are a Micro Transformation methodology that coaches people to deliver value to their organisations using new technologies by an accomplished expert. The expert will help to ensure that a sustainable transformation is taking place - preparing the ground and helping to break down barriers.
-    type: is-school
-    icon: fa-school
-    media: text
-
-  - title: We ensure the participants gain sustainable access to web based data and development tools.
-    description: 
-      - Setting up and maintaining access to a development environment and safe, secure data access is an important factor for a successful project. 
-    type: is-success
-    icon: fa-shapes
-    media: text
-
-  - title: Business people can develop and maintain lightweight data processing pipelines which are much more scalable and powerful than desktop tools.
-    description: 
-      - Test text
-    type: is-link
-    icon: fa-satellite
-    media: text
-
-  - title: Business people get a better understanding of the data dimensions - data does not have to be “flattened” to 2d spreadsheets by IT for business consumption.
-    description: 
-      - Test text
-    type: is-success
-    icon: fa-wave-square
-    media: text
-
-  - title: Business and IT enjoy a more productive relationship because of an improved common understanding.
-    description: 
-      - Test text
-    type: is-link
-    icon: fa-smile
-    media: text
-
-  - title: Business are able to independently create and maintain business logic which is subject to strict change control and 4 eyes principles.
-    description: 
-      - Test text
-    type: is-success
-    icon: fa-git-alt
-    media: text
-
-  - title: Business people are able to process much larger and more complex data without a dependency on IT.
-    description: 
-      - Test text
-    type: is-link
-    icon: fa-atom
-    media: text
-
-  - title: Much less pressure on IT with more technically enabled business departments.
-    description: 
-      - Test text
-    type: is-success
-    icon: fa-atom
-    media: text
-
-  - title: IT no longer has to spoon feed Business teams with formatted data.
-    description: 
-      - Test text
-    type: is-link
-    icon: fa-atom
-    media: text
-
-
-
-
-
-
-
-
-  # - title: Example callout 1
-  #   subtitle: Example subtitle 1
-  #   icon: fa-space-shuttle
-  #   description: - title:
-  #     The example description text goes here and can be multiple lines.
-
-  #     For example, such as this. 
-  #   call_to_action_name: Call to action 1
-  #   call_to_action_link: /page-1/
-  # - title: Example callout 2
-  #   subtitle: Example subtitle 2
-  #   icon: fa-wrench
-  #   description: >
-  #     The example description text goes here and can be multiple lines.
-
-  #     For example, such as this.
-  #   call_to_action_name: Call to action 2
-  #   call_to_action_link: /page-2/
-  # - title: Example callout 3
-  #   subtitle: Example subtitle 3
-  #   icon: fa-github
-  #   icon_brand: true
-  #   description: >
-  #     The example description text goes here and can be multiple lines.
-
-  #     For example, such as this.
-  #   call_to_action_name: Call to action 3
-  #   call_to_action_link: https://www.csrhymes.com/bulma-clean-theme/page-3/
