--- a/_data/skill-sprints/python.yml
+++ b/_data/skill-sprints/python.yml
@@ -8,24 +8,35 @@ url: python
 name: Python Skill Sprint
 problem:
     description:
-      - Less technical business users are forced to make do with limited desktop tools for quite large and complex data sets.
-      - Business needs to be able to independently create and maintain processes and logic that are powerful, safe and flexible.
-      - These processes and logic need to have a flexible change control system that allows four-eyes principles.
+      - text: Less technical business users are forced to make do with limited desktop tools for quite large and complex data sets.
+      - text: Business needs to be able to independently create and maintain processes and logic that are powerful, safe and flexible.
+      - text: These processes and logic need to have a flexible change control system that allows four-eyes principles.
     type: is-success
     icon: fa-atom
     media: text
 
 solution:
     description: 
-      - Business users are introduced to writing code in Python. They learn to extract and transform data using modern powerful tools. 
-      - A modern, web based development environment is provided which prevents the potential for sensitive data landing on user laptops. 
-      - Participants are upskilled and enabled by seasoned industry professionals - real value will be delivered during the Skill-Sprint.
+      - text: Business users are introduced to writing code in Python. They learn to extract and transform data using modern powerful tools. 
+      - text: A modern, web based development environment is provided which prevents the potential for sensitive data landing on user laptops. 
+      - text: Participants are upskilled and enabled by seasoned industry professionals - real value will be delivered during the Skill-Sprint.
     type: is-link
     icon: fa-atom
     media: text
 scenario: A team of people using Microsoft Excel or other similar tools. There is a lot of manual work with an ever increasing error rate. Some of my team have expressed an interest in learning to code.
 
-items:
+tech:
+  description: Python is an interpreted high-level general-purpose programming language with an emphasis on code readability. It aim to help programmers write clear, logical code for small and large-scale projects.
+  name: Python
+  type: Programming Language
+  url: https://www.python.org/
+  benefits:
+    - Scalable compute platform
+    - Flexible
+    - Global
+    - Microsoft Centric Technologies
+
+benefits:
   - title: Skill Sprints are a hybrid training and consultancy product for the introduction of new technologies.
     description: 
       - Introducing new technologies into a business is a difficult task which is often a long drawn out - tortuous affair. Skill Sprints are designed to guide small teams to deliver something with the new technology with the support, guidance and motivation of an expert. This carefully managed process dramatically reduces the Time to First Value.
